# multi-robot-syclop

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  config_db_rrt_example.yaml  run_benchmark.sh
examples/: 3robots_corridor.yaml  README.md  check_regions.py  composite_dbrrt_config.yaml  coupled_rrt_config.yaml  coupled_rrt_geometric_config.yaml  coupled_rrt_kinodynamic_config.yaml  forced_coordination.yaml  planner_config.yaml  planner_config_large_regions.yaml  plot_composite_dbrrt.py  run_example.sh  simple_2robots.yaml  simple_4robots.yaml  simple_4robots_empty.yaml  visualize_decomposition.py  visualize_interactive.py  visualize_planning_stages.py  visualize_solution.py  visualize_to_gif.py
examples/output/: solution.yaml  stats.yaml
examples/planner_cfgs/: config_db_rrt_example.yaml  coupled_rrt_config.yaml  coupled_rrt_geometric_config.yaml  decoupled_rrt_config.yaml  decoupled_rrt_geometric_config.yaml  k_arc_config.yaml  mr_syclop_config.yaml  mr_syclop_geometric_config.yaml  mr_syclop_kinodynamic_config.yaml
experiments/: aggregate_results.py  config.yaml  convert_to_ppl.py  experiment_log.txt  extract_ppl_results.py  generate_scenarios.py  generate_skeleton.py  parse_results.py  plot_results.py  ppl_geometry_generator.py  results_summary.json  run_experiments.py  visualize_problem.py
experiments/configs/arc/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/cipher_geometric/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/cipher_kinodynamic/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/coupled_rrt/: seed_0.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_7.yaml  seed_8.yaml
experiments/configs/coupled_rrt_geometric/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/coupled_rrt_kinodynamic/: seed_1.yaml  seed_2.yaml  seed_6.yaml  seed_9.yaml
experiments/configs/decoupled_rrt/: seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_5.yaml  seed_6.yaml  seed_9.yaml
experiments/configs/decoupled_rrt_geometric/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/decoupled_rrt_kinodynamic/: seed_0.yaml  seed_4.yaml  seed_7.yaml  seed_8.yaml
experiments/configs/drrt/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/k_arc/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/mr_syclop/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/mr_syclop_geometric/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/configs/srrt/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_10/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_12/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_14/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_16/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_18/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_2/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_20/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_22/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_24/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/problems/grid5_20x20/robots_4/: seed_0.yaml  seed_1.yaml  seed_2.yaml  seed_3.yaml  seed_4.yaml  seed_5.yaml  seed_6.yaml  seed_7.yaml  seed_8.yaml  seed_9.yaml
experiments/scenarios/: corridor_40x10.yaml  grid5_20x20.yaml  open_20x20.yaml  random10_20x20.yaml  random5_20x20.yaml  rooms4_20x20.yaml
src/: arc.cpp  arc.h  arc_main.cpp  composite_dbrrt.cpp  composite_dbrrt.h  composite_dbrrt_main.cpp  coupled_rrt.cpp  coupled_rrt.h  coupled_rrt_main.cpp  decomposition.cpp  decomposition.h  decoupled_rrt.cpp  drrt.cpp  drrt.h  k_arc.cpp  k_arc.h  k_arc_main.cpp  main_mr_syclop.cpp  mr_syclop.cpp  mr_syclop.h  mr_syclop_geometric.cpp  mr_syclop_geometric.h  srrt.cpp  srrt.h
src/guided/: README.md  db_rrt_solver.cpp  db_rrt_solver.h  guided_planner.cpp  guided_planner.h  guided_planner_base.h  guided_planner_geometric.cpp  rrt_connect_solver.cpp  rrt_connect_solver.h  syclop_rrt_solver.cpp  syclop_rrt_solver.h
src/mapf/: mapf_cbs.cpp  mapf_cbs.h  mapf_decoupled.cpp  mapf_decoupled.h  mapf_solver.cpp  mapf_solver.h
(+858 files in other folders)
